sumo/tests/sumo/output/e1/errors/file_empty/errors.sumo
Error: Attribute 'file' in definition of detector '4/1to3/1' is empty.
Quitting (on error).
